--- a/challenge/templates/index.html
+++ b/challenge/templates/index.html
@@ -9,7 +9,7 @@
             <li><a href="/image">Disk Image</a></li>
         </ul>
         <h2>Cryptography</h2>
-        <p>One time pad but with images</p>
+        <p>One time pad but with images (you will have to find them)</p>
         <ul>
             <li><a href="/crypto">Skeleton Script</a></li>
         </ul>
